[tool.poetry]
name = "get-tweeted-photo"
version = "0.5.0"
description = ""
authors = ["takatoh <takatoh.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.10.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gtwp = 'get_tweeted_photo.command:main'
