[tool.poetry]
name = "photo-checker"
version = "0.1.0"
description = ""
authors = ["takatoh <takatoh.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.2.0"
bottle = "^0.12.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkthumbs = "photo_checker.make_thumbnails:main"
